<package format="2">
  <name>hpp-bin-picking</name>
  <version>1.0.1</version>
  <description>Package for HPP and bin picking</description>
  <maintainer email="florent.lamiraux@laas.fr">Florent Lamiraux</maintainer>
  <license>BSD-2-Clause license</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
